# benchtool

./: .gitignore  CMakeLists.txt  README.md  benchmark.c  benchmark.h  code_formatter.sh  compare_tidesdb_versions.py  engine_lmdb.c  engine_registry.c  engine_rocksdb.c  engine_tidesdb.c  graphgen.py  install_rocksdb.sh  install_rocksdb_asan.sh  install_tidesdb.sh  large_value_benchmark.sh  large_value_benchmark_1gb.sh  main.c  plot_tidesdb_rocksdb.py  requirements.txt  run.sh  tidesdb_allocator_benchmark.sh  tidesdb_btree_comparison.sh  tidesdb_latency.sh  tidesdb_lmdb.sh  tidesdb_rocksdb.py  tidesdb_rocksdb.sh  tidesdb_rocksdb_benchmark_results_20260206_135011_block_format.csv  tidesdb_rocksdb_benchmark_results_20260206_135011_block_format.txt  tidesdb_rocksdb_benchmark_results_20260206_135859_btree_format.csv  tidesdb_rocksdb_benchmark_results_20260206_135859_btree_format.txt  tidesdb_rocksdb_extensive.sh  tidesdb_rocksdb_larger_than_memory.sh  tidesdb_rocksdb_lmdb.sh  tidesdb_rocksdb_no_bloom_indexes.sh  tidesdb_rocksdb_old.sh  tidesdb_rocksdb_one_billion.sh  tidesdb_rocksdb_pandas.sh  tidesdb_rocksdb_pandas_extensive.sh  tidesdb_rocksdb_single_threaded.sh  (+3 more)
allocator_benchmark_20260128_103936/: benchmark_summary.txt  glibc_results.txt
allocator_benchmark_20260128_104122/: benchmark_summary.txt
